add_library(bullet_collision

        "./include/btBulletCollisionCommon.h"
        "./include/BulletCollision/BroadphaseCollision/btAxisSweep3.h"
        "./include/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h"
        "./include/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h"
        "./include/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.h"
        "./include/BulletCollision/BroadphaseCollision/btDbvt.h"
        "./include/BulletCollision/BroadphaseCollision/btDbvtBroadphase.h"
        "./include/BulletCollision/BroadphaseCollision/btDispatcher.h"
        "./include/BulletCollision/BroadphaseCollision/btMultiSapBroadphase.h"
        "./include/BulletCollision/BroadphaseCollision/btOverlappingPairCache.h"
        "./include/BulletCollision/BroadphaseCollision/btOverlappingPairCallback.h"
        "./include/BulletCollision/BroadphaseCollision/btQuantizedBvh.h"
        "./include/BulletCollision/BroadphaseCollision/btSimpleBroadphase.h"
        "./include/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btBoxBoxDetector.h"
        "./include/BulletCollision/CollisionDispatch/btCollisionConfiguration.h"
        "./include/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h"
        "./include/BulletCollision/CollisionDispatch/btCollisionDispatcher.h"
        "./include/BulletCollision/CollisionDispatch/btCollisionObject.h"
        "./include/BulletCollision/CollisionDispatch/btCollisionObjectWrapper.h"
        "./include/BulletCollision/CollisionDispatch/btCollisionWorld.h"
        "./include/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.h"
        "./include/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btGhostObject.h"
        "./include/BulletCollision/CollisionDispatch/btInternalEdgeUtility.h"
        "./include/BulletCollision/CollisionDispatch/btManifoldResult.h"
        "./include/BulletCollision/CollisionDispatch/btSimulationIslandManager.h"
        "./include/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.h"
        "./include/BulletCollision/CollisionDispatch/btUnionFind.h"
        "./include/BulletCollision/CollisionDispatch/SphereTriangleDetector.h"
        "./include/BulletCollision/CollisionShapes/btBox2dShape.h"
        "./include/BulletCollision/CollisionShapes/btBoxShape.h"
        "./include/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h"
        "./include/BulletCollision/CollisionShapes/btCapsuleShape.h"
        "./include/BulletCollision/CollisionShapes/btCollisionMargin.h"
        "./include/BulletCollision/CollisionShapes/btCollisionShape.h"
        "./include/BulletCollision/CollisionShapes/btCompoundShape.h"
        "./include/BulletCollision/CollisionShapes/btConcaveShape.h"
        "./include/BulletCollision/CollisionShapes/btConeShape.h"
        "./include/BulletCollision/CollisionShapes/btConvex2dShape.h"
        "./include/BulletCollision/CollisionShapes/btConvexHullShape.h"
        "./include/BulletCollision/CollisionShapes/btConvexInternalShape.h"
        "./include/BulletCollision/CollisionShapes/btConvexPointCloudShape.h"
        "./include/BulletCollision/CollisionShapes/btConvexPolyhedron.h"
        "./include/BulletCollision/CollisionShapes/btConvexShape.h"
        "./include/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.h"
        "./include/BulletCollision/CollisionShapes/btCylinderShape.h"
        "./include/BulletCollision/CollisionShapes/btEmptyShape.h"
        "./include/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.h"
        "./include/BulletCollision/CollisionShapes/btMaterial.h"
        "./include/BulletCollision/CollisionShapes/btMinkowskiSumShape.h"
        "./include/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.h"
        "./include/BulletCollision/CollisionShapes/btMultiSphereShape.h"
        "./include/BulletCollision/CollisionShapes/btOptimizedBvh.h"
        "./include/BulletCollision/CollisionShapes/btPolyhedralConvexShape.h"
        "./include/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.h"
        "./include/BulletCollision/CollisionShapes/btShapeHull.h"
        "./include/BulletCollision/CollisionShapes/btSphereShape.h"
        "./include/BulletCollision/CollisionShapes/btStaticPlaneShape.h"
        "./include/BulletCollision/CollisionShapes/btStridingMeshInterface.h"
        "./include/BulletCollision/CollisionShapes/btTetrahedronShape.h"
        "./include/BulletCollision/CollisionShapes/btTriangleBuffer.h"
        "./include/BulletCollision/CollisionShapes/btTriangleCallback.h"
        "./include/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.h"
        "./include/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.h"
        "./include/BulletCollision/CollisionShapes/btTriangleInfoMap.h"
        "./include/BulletCollision/CollisionShapes/btTriangleMesh.h"
        "./include/BulletCollision/CollisionShapes/btTriangleMeshShape.h"
        "./include/BulletCollision/CollisionShapes/btTriangleShape.h"
        "./include/BulletCollision/CollisionShapes/btUniformScalingShape.h"
        "./include/BulletCollision/Gimpact/btBoxCollision.h"
        "./include/BulletCollision/Gimpact/btClipPolygon.h"
        "./include/BulletCollision/Gimpact/btContactProcessing.h"
        "./include/BulletCollision/Gimpact/btGenericPoolAllocator.h"
        "./include/BulletCollision/Gimpact/btGeometryOperations.h"
        "./include/BulletCollision/Gimpact/btGImpactBvh.h"
        "./include/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h"
        "./include/BulletCollision/Gimpact/btGImpactMassUtil.h"
        "./include/BulletCollision/Gimpact/btGImpactQuantizedBvh.h"
        "./include/BulletCollision/Gimpact/btGImpactShape.h"
        "./include/BulletCollision/Gimpact/btQuantization.h"
        "./include/BulletCollision/Gimpact/btTriangleShapeEx.h"
        "./include/BulletCollision/Gimpact/gim_array.h"
        "./include/BulletCollision/Gimpact/gim_basic_geometry_operations.h"
        "./include/BulletCollision/Gimpact/gim_bitset.h"
        "./include/BulletCollision/Gimpact/gim_box_collision.h"
        "./include/BulletCollision/Gimpact/gim_box_set.h"
        "./include/BulletCollision/Gimpact/gim_clip_polygon.h"
        "./include/BulletCollision/Gimpact/gim_contact.h"
        "./include/BulletCollision/Gimpact/gim_geometry.h"
        "./include/BulletCollision/Gimpact/gim_geom_types.h"
        "./include/BulletCollision/Gimpact/gim_hash_table.h"
        "./include/BulletCollision/Gimpact/gim_linear_math.h"
        "./include/BulletCollision/Gimpact/gim_math.h"
        "./include/BulletCollision/Gimpact/gim_memory.h"
        "./include/BulletCollision/Gimpact/gim_radixsort.h"
        "./include/BulletCollision/Gimpact/gim_tri_collision.h"
        "./include/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.h"
        "./include/BulletCollision/NarrowPhaseCollision/btConvexCast.h"
        "./include/BulletCollision/NarrowPhaseCollision/btConvexPenetrationDepthSolver.h"
        "./include/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h"
        "./include/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.h"
        "./include/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h"
        "./include/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.h"
        "./include/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h"
        "./include/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h"
        "./include/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.h"
        "./include/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h"
        "./include/BulletCollision/NarrowPhaseCollision/btPointCollector.h"
        "./include/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.h"
        "./include/BulletCollision/NarrowPhaseCollision/btRaycastCallback.h"
        "./include/BulletCollision/NarrowPhaseCollision/btSimplexSolverInterface.h"
        "./include/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.h"
        "./include/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h"

        "./src/BroadphaseCollision/btAxisSweep3.cpp"
        "./src/BroadphaseCollision/btBroadphaseProxy.cpp"
        "./src/BroadphaseCollision/btCollisionAlgorithm.cpp"
        "./src/BroadphaseCollision/btDbvt.cpp"
        "./src/BroadphaseCollision/btDbvtBroadphase.cpp"
        "./src/BroadphaseCollision/btDispatcher.cpp"
        "./src/BroadphaseCollision/btMultiSapBroadphase.cpp"
        "./src/BroadphaseCollision/btOverlappingPairCache.cpp"
        "./src/BroadphaseCollision/btQuantizedBvh.cpp"
        "./src/BroadphaseCollision/btSimpleBroadphase.cpp"
        "./src/CollisionDispatch/btActivatingCollisionAlgorithm.cpp"
        "./src/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp"
        "./src/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp"
        "./src/CollisionDispatch/btBoxBoxDetector.cpp"
        "./src/CollisionDispatch/btCollisionDispatcher.cpp"
        "./src/CollisionDispatch/btCollisionObject.cpp"
        "./src/CollisionDispatch/btCollisionWorld.cpp"
        "./src/CollisionDispatch/btCompoundCollisionAlgorithm.cpp"
        "./src/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp"
        "./src/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp"
        "./src/CollisionDispatch/btConvexConvexAlgorithm.cpp"
        "./src/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp"
        "./src/CollisionDispatch/btDefaultCollisionConfiguration.cpp"
        "./src/CollisionDispatch/btEmptyCollisionAlgorithm.cpp"
        "./src/CollisionDispatch/btGhostObject.cpp"
        "./src/CollisionDispatch/btInternalEdgeUtility.cpp"
        "./src/CollisionDispatch/btManifoldResult.cpp"
        "./src/CollisionDispatch/btSimulationIslandManager.cpp"
        "./src/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp"
        "./src/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp"
        "./src/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp"
        "./src/CollisionDispatch/btUnionFind.cpp"
        "./src/CollisionDispatch/SphereTriangleDetector.cpp"
        "./src/CollisionShapes/btBox2dShape.cpp"
        "./src/CollisionShapes/btBoxShape.cpp"
        "./src/CollisionShapes/btBvhTriangleMeshShape.cpp"
        "./src/CollisionShapes/btCapsuleShape.cpp"
        "./src/CollisionShapes/btCollisionShape.cpp"
        "./src/CollisionShapes/btCompoundShape.cpp"
        "./src/CollisionShapes/btConcaveShape.cpp"
        "./src/CollisionShapes/btConeShape.cpp"
        "./src/CollisionShapes/btConvex2dShape.cpp"
        "./src/CollisionShapes/btConvexHullShape.cpp"
        "./src/CollisionShapes/btConvexInternalShape.cpp"
        "./src/CollisionShapes/btConvexPointCloudShape.cpp"
        "./src/CollisionShapes/btConvexPolyhedron.cpp"
        "./src/CollisionShapes/btConvexShape.cpp"
        "./src/CollisionShapes/btConvexTriangleMeshShape.cpp"
        "./src/CollisionShapes/btCylinderShape.cpp"
        "./src/CollisionShapes/btEmptyShape.cpp"
        "./src/CollisionShapes/btHeightfieldTerrainShape.cpp"
        "./src/CollisionShapes/btMinkowskiSumShape.cpp"
        "./src/CollisionShapes/btMultimaterialTriangleMeshShape.cpp"
        "./src/CollisionShapes/btMultiSphereShape.cpp"
        "./src/CollisionShapes/btOptimizedBvh.cpp"
        "./src/CollisionShapes/btPolyhedralConvexShape.cpp"
        "./src/CollisionShapes/btScaledBvhTriangleMeshShape.cpp"
        "./src/CollisionShapes/btShapeHull.cpp"
        "./src/CollisionShapes/btSphereShape.cpp"
        "./src/CollisionShapes/btStaticPlaneShape.cpp"
        "./src/CollisionShapes/btStridingMeshInterface.cpp"
        "./src/CollisionShapes/btTetrahedronShape.cpp"
        "./src/CollisionShapes/btTriangleBuffer.cpp"
        "./src/CollisionShapes/btTriangleCallback.cpp"
        "./src/CollisionShapes/btTriangleIndexVertexArray.cpp"
        "./src/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp"
        "./src/CollisionShapes/btTriangleMesh.cpp"
        "./src/CollisionShapes/btTriangleMeshShape.cpp"
        "./src/CollisionShapes/btUniformScalingShape.cpp"
        "./src/Gimpact/btContactProcessing.cpp"
        "./src/Gimpact/btGenericPoolAllocator.cpp"
        "./src/Gimpact/btGImpactBvh.cpp"
        "./src/Gimpact/btGImpactCollisionAlgorithm.cpp"
        "./src/Gimpact/btGImpactQuantizedBvh.cpp"
        "./src/Gimpact/btGImpactShape.cpp"
        "./src/Gimpact/btTriangleShapeEx.cpp"
        "./src/Gimpact/gim_box_set.cpp"
        "./src/Gimpact/gim_contact.cpp"
        "./src/Gimpact/gim_memory.cpp"
        "./src/Gimpact/gim_tri_collision.cpp"
        "./src/NarrowPhaseCollision/btContinuousConvexCollision.cpp"
        "./src/NarrowPhaseCollision/btConvexCast.cpp"
        "./src/NarrowPhaseCollision/btGjkConvexCast.cpp"
        "./src/NarrowPhaseCollision/btGjkEpa2.cpp"
        "./src/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp"
        "./src/NarrowPhaseCollision/btGjkPairDetector.cpp"
        "./src/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp"
        "./src/NarrowPhaseCollision/btPersistentManifold.cpp"
        "./src/NarrowPhaseCollision/btPolyhedralContactClipping.cpp"
        "./src/NarrowPhaseCollision/btRaycastCallback.cpp"
        "./src/NarrowPhaseCollision/btSubSimplexConvexCast.cpp"
        "./src/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp"
        )