add_library(bullet_dynamics
        "./include/btBulletDynamicsCommon.h"
        "./include/Bullet-C-Api.h"
        "./include/BulletDynamics/Character/btCharacterControllerInterface.h"
        "./include/BulletDynamics/Character/btKinematicCharacterController.h"
        "./include/BulletDynamics/ConstraintSolver/btConeTwistConstraint.h"
        "./include/BulletDynamics/ConstraintSolver/btConstraintSolver.h"
        "./include/BulletDynamics/ConstraintSolver/btContactConstraint.h"
        "./include/BulletDynamics/ConstraintSolver/btContactSolverInfo.h"
        "./include/BulletDynamics/ConstraintSolver/btGearConstraint.h"
        "./include/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.h"
        "./include/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.h"
        "./include/BulletDynamics/ConstraintSolver/btHinge2Constraint.h"
        "./include/BulletDynamics/ConstraintSolver/btHingeConstraint.h"
        "./include/BulletDynamics/ConstraintSolver/btJacobianEntry.h"
        "./include/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.h"
        "./include/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.h"
        "./include/BulletDynamics/ConstraintSolver/btSliderConstraint.h"
        "./include/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.h"
        "./include/BulletDynamics/ConstraintSolver/btSolverBody.h"
        "./include/BulletDynamics/ConstraintSolver/btSolverConstraint.h"
        "./include/BulletDynamics/ConstraintSolver/btTypedConstraint.h"
        "./include/BulletDynamics/ConstraintSolver/btUniversalConstraint.h"
        "./include/BulletDynamics/Dynamics/btActionInterface.h"
        "./include/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h"
        "./include/BulletDynamics/Dynamics/btDynamicsWorld.h"
        "./include/BulletDynamics/Dynamics/btRigidBody.h"
        "./include/BulletDynamics/Dynamics/btSimpleDynamicsWorld.h"
        "./include/BulletDynamics/Vehicle/btRaycastVehicle.h"
        "./include/BulletDynamics/Vehicle/btVehicleRaycaster.h"
        "./include/BulletDynamics/Vehicle/btWheelInfo.h"

        "./src/Character/btKinematicCharacterController.cpp"
        "./src/ConstraintSolver/btConeTwistConstraint.cpp"
        "./src/ConstraintSolver/btContactConstraint.cpp"
        "./src/ConstraintSolver/btGearConstraint.cpp"
        "./src/ConstraintSolver/btGeneric6DofConstraint.cpp"
        "./src/ConstraintSolver/btGeneric6DofSpringConstraint.cpp"
        "./src/ConstraintSolver/btHinge2Constraint.cpp"
        "./src/ConstraintSolver/btHingeConstraint.cpp"
        "./src/ConstraintSolver/btPoint2PointConstraint.cpp"
        "./src/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp"
        "./src/ConstraintSolver/btSliderConstraint.cpp"
        "./src/ConstraintSolver/btSolve2LinearConstraint.cpp"
        "./src/ConstraintSolver/btTypedConstraint.cpp"
        "./src/ConstraintSolver/btUniversalConstraint.cpp"
        "./src/Dynamics/btDiscreteDynamicsWorld.cpp"
        "./src/Dynamics/btRigidBody.cpp"
        "./src/Dynamics/btSimpleDynamicsWorld.cpp"
        "./src/Dynamics/Bullet-C-API.cpp"
        "./src/Vehicle/btRaycastVehicle.cpp"
        "./src/Vehicle/btWheelInfo.cpp"
        )