add_library(bullet_linearmath

        "./include/LinearMath/btAabbUtil2.h"
        "./include/LinearMath/btAlignedAllocator.h"
        "./include/LinearMath/btAlignedObjectArray.h"
        "./include/LinearMath/btConvexHull.h"
        "./include/LinearMath/btConvexHullComputer.h"
        "./include/LinearMath/btDefaultMotionState.h"
        "./include/LinearMath/btGeometryUtil.h"
        "./include/LinearMath/btGrahamScan2dConvexHull.h"
        "./include/LinearMath/btHashMap.h"
        "./include/LinearMath/btIDebugDraw.h"
        "./include/LinearMath/btList.h"
        "./include/LinearMath/btMatrix3x3.h"
        "./include/LinearMath/btMinMax.h"
        "./include/LinearMath/btMotionState.h"
        "./include/LinearMath/btPolarDecomposition.h"
        "./include/LinearMath/btPoolAllocator.h"
        "./include/LinearMath/btQuadWord.h"
        "./include/LinearMath/btQuaternion.h"
        "./include/LinearMath/btQuickprof.h"
        "./include/LinearMath/btRandom.h"
        "./include/LinearMath/btScalar.h"
        "./include/LinearMath/btSerializer.h"
        "./include/LinearMath/btStackAlloc.h"
        "./include/LinearMath/btTransform.h"
        "./include/LinearMath/btTransformUtil.h"
        "./include/LinearMath/btVector3.h"

        "./src/btAlignedAllocator.cpp"
        "./src/btConvexHull.cpp"
        "./src/btConvexHullComputer.cpp"
        "./src/btGeometryUtil.cpp"
        "./src/btPolarDecomposition.cpp"
        "./src/btQuickprof.cpp"
        "./src/btSerializer.cpp"
        "./src/btVector3.cpp"
        )