# created on 2021/1/31
# author @zoloypzuo
add_library(demo_framework
        include/Agent.h
        include/AgentGroup.h
        include/AgentPath.h
        include/AgentUtilities.h
        include/AnimationUtilities.h
        include/BaseApplication.h
        include/Collision.h
        include/DebugDrawer.h
        include/Event.h
        include/InfluenceMap.h
        include/InfluenceMapDrawer.h
        include/InfluenceMapUtilities.h
        include/LuaFile.h
        include/LuaFileManager.h
        include/LuaFilePtr.h
        include/LuaFileSerializer.h
        include/LuaScriptBindings.h
        include/LuaScriptUtilities.h
        include/MeshUtilities.h
        include/NavigationMesh.h
        include/NavigationUtilities.h
        include/ObfuscatedZip.h
        include/Object.h
        include/ParticleUtilities.h
        include/PhysicsDebugDraw.h
        include/PhysicsUtilities.h
        include/PhysicsWorld.h
        include/PrecompiledHeaders.h
        include/Sandbox.h
        include/SandboxApplication.h
        include/SandboxObject.h
        include/SandboxUtilities.h
        include/SkeletonDebug.h
        include/TriangleBoxIntersection.h
        include/UserInterface.h
        include/UserInterfaceComponent.h
        include/UserInterfaceUtilities.h

        src/Agent.cpp
        src/AgentGroup.cpp
        src/AgentPath.cpp
        src/AgentUtilities.cpp
        src/AnimationUtilities.cpp
        src/BaseApplication.cpp
        src/Collision.cpp
        src/DebugDrawer.cpp
        src/Event.cpp
        src/InfluenceMap.cpp
        src/InfluenceMapDrawer.cpp
        src/InfluenceMapUtilities.cpp
        src/LuaFile.cpp
        src/LuaFileManager.cpp
        src/LuaFilePtr.cpp
        src/LuaFileSerializer.cpp
        src/LuaScriptBindings.cpp
        src/LuaScriptUtilities.cpp
        src/MeshUtilities.cpp
        src/NavigationMesh.cpp
        src/NavigationUtilities.cpp
        src/ObfuscatedZip.cpp
        src/Object.cpp
        src/ParticleUtilities.cpp
        src/PhysicsDebugDraw.cpp
        src/PhysicsUtilities.cpp
        src/PhysicsWorld.cpp
        src/PrecompiledHeaders.cpp
        src/Sandbox.cpp
        src/SandboxApplication.cpp
        src/SandboxObject.cpp
        src/SandboxUtilities.cpp
        src/SkeletonDebug.cpp
        src/TriangleBoxIntersection.cpp
        src/UserInterface.cpp
        src/UserInterfaceComponent.cpp
        src/UserInterfaceUtilities.cpp
        )