add_library(detour

"./include/DetourAlloc.h"
"./include/DetourAssert.h"
"./include/DetourCommon.h"
"./include/DetourNavMesh.h"
"./include/DetourNavMeshBuilder.h"
"./include/DetourNavMeshQuery.h"
"./include/DetourNode.h"
"./include/DetourStatus.h"

"./src/DetourAlloc.cpp"
"./src/DetourCommon.cpp"
"./src/DetourNavMesh.cpp"
"./src/DetourNavMeshBuilder.cpp"
"./src/DetourNavMeshQuery.cpp"
"./src/DetourNode.cpp"
)
