add_library(freeimage

"./include/CacheFile.h"
"./include/DeprecationMgr.h"
"./include/Filters.h"
"./include/FIRational.h"
"./include/FreeImage.h"
"./include/FreeImageIO.h"
"./include/FreeImageTag.h"
"./include/Plugin.h"
"./include/PSDParser.h"
"./include/Quantizers.h"
"./include/Resize.h"
"./include/ToneMapping.h"
"./include/Utilities.h"

"./src/deprecationmanager/Deprecated.cpp"
"./src/deprecationmanager/DeprecationMgr.cpp"
"./src/freeimage/BitmapAccess.cpp"
"./src/freeimage/CacheFile.cpp"
"./src/freeimage/ColorLookup.cpp"
"./src/freeimage/Conversion.cpp"
"./src/freeimage/Conversion16_555.cpp"
"./src/freeimage/Conversion16_565.cpp"
"./src/freeimage/Conversion24.cpp"
"./src/freeimage/Conversion32.cpp"
"./src/freeimage/Conversion4.cpp"
"./src/freeimage/Conversion8.cpp"
"./src/freeimage/ConversionFloat.cpp"
"./src/freeimage/ConversionRGB16.cpp"
"./src/freeimage/ConversionRGBF.cpp"
"./src/freeimage/ConversionType.cpp"
"./src/freeimage/ConversionUINT16.cpp"
"./src/freeimage/FreeImage.cpp"
"./src/freeimage/FreeImageIO.cpp"
"./src/freeimage/GetType.cpp"
"./src/freeimage/Halftoning.cpp"
"./src/freeimage/J2KHelper.cpp"
"./src/freeimage/MemoryIO.cpp"
"./src/freeimage/MNGHelper.cpp"
"./src/freeimage/MultiPage.cpp"
"./src/freeimage/NNQuantizer.cpp"
"./src/freeimage/PixelAccess.cpp"
"./src/freeimage/Plugin.cpp"
"./src/freeimage/PluginBMP.cpp"
"./src/freeimage/PluginCUT.cpp"
"./src/freeimage/PluginDDS.cpp"
"./src/freeimage/PluginEXR.cpp"
"./src/freeimage/PluginG3.cpp"
"./src/freeimage/PluginGIF.cpp"
"./src/freeimage/PluginHDR.cpp"
"./src/freeimage/PluginICO.cpp"
"./src/freeimage/PluginIFF.cpp"
"./src/freeimage/PluginJ2K.cpp"
"./src/freeimage/PluginJNG.cpp"
"./src/freeimage/PluginJP2.cpp"
"./src/freeimage/PluginJPEG.cpp"
"./src/freeimage/PluginKOALA.cpp"
"./src/freeimage/PluginMNG.cpp"
"./src/freeimage/PluginPCD.cpp"
"./src/freeimage/PluginPCX.cpp"
"./src/freeimage/PluginPFM.cpp"
"./src/freeimage/PluginPICT.cpp"
"./src/freeimage/PluginPNG.cpp"
"./src/freeimage/PluginPNM.cpp"
"./src/freeimage/PluginPSD.cpp"
"./src/freeimage/PluginRAS.cpp"
"./src/freeimage/PluginRAW.cpp"
"./src/freeimage/PluginSGI.cpp"
"./src/freeimage/PluginTARGA.cpp"
"./src/freeimage/PluginTIFF.cpp"
"./src/freeimage/PluginWBMP.cpp"
"./src/freeimage/PluginXBM.cpp"
"./src/freeimage/PluginXPM.cpp"
"./src/freeimage/PSDParser.cpp"
"./src/freeimage/TIFFLogLuv.cpp"
"./src/freeimage/tmoColorConvert.cpp"
"./src/freeimage/tmoDrago03.cpp"
"./src/freeimage/tmoFattal02.cpp"
"./src/freeimage/tmoReinhard05.cpp"
"./src/freeimage/ToneMapping.cpp"
"./src/freeimage/WuQuantizer.cpp"
"./src/freeimage/ZLibInterface.cpp"
"./src/freeimagetoolkit/Background.cpp"
"./src/freeimagetoolkit/BSplineRotate.cpp"
"./src/freeimagetoolkit/Channels.cpp"
"./src/freeimagetoolkit/ClassicRotate.cpp"
"./src/freeimagetoolkit/Colors.cpp"
"./src/freeimagetoolkit/CopyPaste.cpp"
"./src/freeimagetoolkit/Display.cpp"
"./src/freeimagetoolkit/Flip.cpp"
"./src/freeimagetoolkit/JPEGTransform.cpp"
"./src/freeimagetoolkit/MultigridPoissonSolver.cpp"
"./src/freeimagetoolkit/Rescale.cpp"
"./src/freeimagetoolkit/Resize.cpp"
"./src/metadata/Exif.cpp"
"./src/metadata/FIRational.cpp"
"./src/metadata/FreeImageTag.cpp"
"./src/metadata/IPTC.cpp"
"./src/metadata/TagConversion.cpp"
"./src/metadata/TagLib.cpp"
"./src/metadata/XTIFF.cpp"
)
