add_library(libopenjpeg

"./include/bio.h"
"./include/cidx_manager.h"
"./include/cio.h"
"./include/dwt.h"
"./include/event.h"
"./include/fix.h"
"./include/image.h"
"./include/indexbox_manager.h"
"./include/int.h"
"./include/j2k.h"
"./include/j2k_lib.h"
"./include/jp2.h"
"./include/jpt.h"
"./include/mct.h"
"./include/mqc.h"
"./include/openjpeg.h"
"./include/opj_config.h"
"./include/opj_includes.h"
"./include/opj_malloc.h"
"./include/pi.h"
"./include/raw.h"
"./include/t1.h"
"./include/t1_luts.h"
"./include/t2.h"
"./include/tcd.h"
"./include/tgt.h"

"./src/bio.c"
"./src/cidx_manager.c"
"./src/cio.c"
"./src/dwt.c"
"./src/event.c"
"./src/image.c"
"./src/j2k.c"
"./src/j2k_lib.c"
"./src/jp2.c"
"./src/jpt.c"
"./src/mct.c"
"./src/mqc.c"
"./src/openjpeg.c"
"./src/phix_manager.c"
"./src/pi.c"
"./src/ppix_manager.c"
"./src/raw.c"
"./src/t1.c"
"./src/t2.c"
"./src/tcd.c"
"./src/tgt.c"
"./src/thix_manager.c"
"./src/tpix_manager.c"
)
