add_library(libpng

"./include/png.h"
"./include/pngconf.h"
"./include/pngdebug.h"
"./include/pnginfo.h"
"./include/pnglibconf.h"
"./include/pngpriv.h"
"./include/pngstruct.h"

"./src/png.c"
"./src/pngerror.c"
"./src/pngget.c"
"./src/pngmem.c"
"./src/pngpread.c"
"./src/pngread.c"
"./src/pngrio.c"
"./src/pngrtran.c"
"./src/pngrutil.c"
"./src/pngset.c"
"./src/pngtrans.c"
"./src/pngwio.c"
"./src/pngwrite.c"
"./src/pngwtran.c"
"./src/pngwutil.c"
)
