add_library(libvorbis

"./include/vorbis/codec.h"
"./include/vorbis/vorbisenc.h"
"./include/vorbis/vorbisfile.h"
"./src/backends.h"
"./src/bitrate.h"
"./src/codebook.h"
"./src/codec_internal.h"
"./src/envelope.h"
"./src/highlevel.h"
"./src/lookup.h"
"./src/lookup_data.h"
"./src/lpc.h"
"./src/lsp.h"
"./src/masking.h"
"./src/mdct.h"
"./src/misc.h"
"./src/os.h"
"./src/psy.h"
"./src/registry.h"
"./src/scales.h"
"./src/smallft.h"
"./src/window.h"
"./src/books/coupled/res_books_51.h"
"./src/books/coupled/res_books_stereo.h"
"./src/books/floor/floor_books.h"
"./src/books/uncoupled/res_books_uncoupled.h"
"./src/modes/floor_all.h"
"./src/modes/psych_11.h"
"./src/modes/psych_16.h"
"./src/modes/psych_44.h"
"./src/modes/psych_8.h"
"./src/modes/residue_16.h"
"./src/modes/residue_44.h"
"./src/modes/residue_44p51.h"
"./src/modes/residue_44u.h"
"./src/modes/residue_8.h"
"./src/modes/setup_11.h"
"./src/modes/setup_16.h"
"./src/modes/setup_22.h"
"./src/modes/setup_32.h"
"./src/modes/setup_44.h"
"./src/modes/setup_44p51.h"
"./src/modes/setup_44u.h"
"./src/modes/setup_8.h"
"./src/modes/setup_X.h"

"./src/analysis.c"
"./src/barkmel.c"
"./src/bitrate.c"
"./src/block.c"
"./src/codebook.c"
"./src/envelope.c"
"./src/floor0.c"
"./src/floor1.c"
"./src/info.c"
"./src/lookup.c"
"./src/lpc.c"
"./src/lsp.c"
"./src/mapping0.c"
"./src/mdct.c"
"./src/psy.c"
"./src/psytune.c"
"./src/registry.c"
"./src/res0.c"
"./src/sharedbook.c"
"./src/smallft.c"
"./src/synthesis.c"
"./src/tone.c"
"./src/vorbisenc.c"
"./src/vorbisfile.c"
"./src/window.c"
)
